Partial fix for bug #25803 (xml_get_current_byte_index() always returns 0)